--- a/webcomponent-app/demo.html
+++ b/webcomponent-app/demo.html
@@ -7,7 +7,7 @@
 		<script type="module" src="utils/filter-stream.js"></script>
 		<script type="module" src="utils/shader-renderer.js"></script>
 		<script type="module" src="utils/media-devices.js"></script>
-		<script type="module" src="app.js"></script>
+		<script type="module" src="demo.js"></script>
 		<script src="openvidu-webcomponent-dev.js"></script>
 		<link rel="stylesheet" href="openvidu-webcomponent-dev.css" />
 
